--- a/composer.json
+++ b/composer.json
@@ -96,7 +96,7 @@
         "symfony/phpunit-bridge": "^4.4",
         "symfony/stopwatch": "^4.4",
         "symfony/var-dumper": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/web-profiler-bundle": "4.4.*"
     },
     "repositories": [
         {
