--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -4,16 +4,16 @@ parameters:
 nelmio_cors:
     defaults:
         allow_credentials: false
-#        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-#        allow_headers: ['Content-Type', 'Authorization', 'X-AUTH-USER', 'X-AUTH-TOKEN']
-#        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
+        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
+        allow_headers: ['Content-Type', 'Authorization', 'X-AUTH-USER', 'X-AUTH-TOKEN']
+        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
 #        expose_headers: ['Link']
-#        max_age: 3600
-        allow_origin: []
-        allow_headers: []
-        allow_methods: []
+        max_age: 3600
+        #allow_origin: []
+        #allow_headers: []
+        #allow_methods: []
         expose_headers: []
-        max_age: 0
+#        max_age: 0
         hosts: []
         origin_regex: true
         forced_allow_origin_value: ~
